# project-git-release-connector-gitea

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yaml  publish.yml  release-please.yaml  run-test.yaml
connectors/gitea/: pyproject.toml
connectors/gitea/src/pgr_connector_gitea/: __init__.py
core/: pyproject.toml
core/src/pgr/: __init__.py  __main__.py  core.py  helper.py  interfaces.py  logger_setup.py  registry.py  runner.py
core/src/pgr/change_log/: __init__.py  util.py
core/src/pgr/config/: __init__.py  release_config.py
core/src/pgr/conv_commit/: __init__.py  class_conv_commit_details.py  resolver.py
core/src/pgr/file_handler/: __init__.py  changelog_generator.py  extra_file_version_updater.py  version_file_generator.py
core/src/pgr/git/: __init__.py  data_classes.py  git_commander.py
core/src/pgr/semver_util/: __init__.py  util.py
core/test/pgr/conv_commit/: resolver_test.py
docs/: CHANGELOG.md  ReleaseCommitMessage.md  ReleaseText.md
docs/plantuml/: create_release_flow.puml  update_flow.puml
src/pgr_connector_gitea/: gitea_connector.py
src/project_git_release_connector_gitea/: __init__.py  gitea_connector.py
test/project_git_release_connector_gitea/: conftest.py  gitea_conn_create_pr_test.py  gitea_conn_get_latest_release_pr_test.py  gitea_conn_get_latest_release_test.py  gitea_conn_update_pr_test.py  gitea_connector_test.py  resolver_test.py
test/project_git_release_connector_gitea/gitea_connector/: create_pr_test.py  create_release_test.py  get_commit_details_test.py  get_latest_release_pr_test.py  get_latest_release_test.py  get_release_by_tag_test.py  get_tag_details_test.py  update_pr_test.py
